# metamodel

./: README.md  setup.cfg
data/: bank_metamodel_horizontal.yaml  enterprise_metamodel.yaml
docs/: metamodel_contribution_rules.md  metamodel_yaml_format.md
metamodel2owl/: __init__.py  cli.py
metamodel_to_mermaid/: __init__.py  __main__.py  cli.py  loader.py  model.py  render_er.py  render_flow.py  styles.py
schema/: metamodel.schema.yaml
tests/: test_cli.py
tests/fixtures/: invalid_missing_required.yaml  minimal.yaml
