[metadata]
name = metamodel2owl
version = 0.1.0
description = Convert banking metamodel YAML files to OWL ontologies
long_description = file: README.md
long_description_content_type = text/markdown
author = OpenAI ChatGPT
license = MIT
license_files = LICENSE

[options]
packages = find:
install_requires =
    PyYAML
    jsonschema
    rdflib
    rdflib-jsonld
python_requires = >=3.9
include_package_data = True

[options.package_data]
metamodel2owl =
    schema/*.yaml

[options.entry_points]
console_scripts =
    metamodel2owl = metamodel2owl.cli:main
